[package]
name = "dlt-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdlt = { path = "../libdlt"}
dlt-core = "0.14"
thiserror = "1.0.38"
async-std = "1.12.0"
libc = "0.2"
bytes = "1.4.0"
ringbuf = "0.3.2"
async-ringbuf = "0.1.2"


