[package]
name = "libdlt_so"
version = "0.1.0"
edition = "2021"

[lib]
name = "dlt"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlt-user = { path = "../dlt-user"}

[profile.release]
strip = "debuginfo"

[profile.dev]
strip = "debuginfo"

